# Media

./: .gitignore  README.md  gradle.properties
app/: CMakeLists.txt  build.gradle  project.properties
app/src/main/: AndroidManifest.xml
app/src/main/assets/: analoghole_intro_remix.m4a
app/src/main/java/fm/player/: MainActivity.java
app/src/main/java/fm/player/downloads/: DownloadSettings.java  DownloadUtils.java
app/src/main/java/fm/player/eventsbus/: Events.java
app/src/main/java/fm/player/playback/: MediaPlayerWrapper.java  MediaPlayerWrapperListener.java
app/src/main/java/fm/player/playeraudio/: Episode.java  PlayerActivity.java  SelectPlayerFMEpisode.java  Series.java
app/src/main/java/fm/player/services/: QueueJobIntentService.java
app/src/main/jni/: CustomMediaPlayer.cpp  CustomMediaPlayer.h  Mpg123Decoder.cpp  Mpg123Decoder.h  Utils.h  sonicjni.c  sonicjni.h
app/src/main/jni/FLAC/FLAC/: format_FLAC.c  lpc.c
app/src/main/jni/fftpack/: fft.cpp
app/src/main/jni/filters/: ReduceNoise.cpp  ReduceNoise.h  SilenceSkip.cpp  SilenceSkip.h  VolumeBoost.cpp  VolumeBoost.h
app/src/main/jni/libvorbis-jni/: org_xiph_vorbis_encoder_VorbisEncoder.c
app/src/main/jni/mpg123/: id3.c  mpg123.h  synth_arm.S
app/src/main/jni/vorbis/: stb_vorbis.c
app/src/main/jni/vorbis/modes/: floor_all.h  residue_44.h  residue_44p51.h  residue_44u.h  residue_8.h
app/src/main/res/layout/: activity_main.xml  activity_player.xml  activity_select_episode.xml  episode_card_view.xml  episode_item.xml
app/src/main/res/values/: colors.xml  strings.xml  styles.xml
(+29 files in other folders)
